# idcard-pdf-combiner

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
experiments/benchmark/: README.md  benchmark.ts  index.html
experiments/entropy-wasm/: Cargo.toml  README.md
experiments/entropy-wasm/src/: entropy.ts  lib.rs
experiments/onnx-demo/: index.html  script.ts
experiments/python-paddle/: main.py  pyproject.toml
src/: entropy-crop.ts  image-processor.ts  main.ts  pdf-image-extractor.ts  pdf-processor.ts  style.css  types.d.ts  ui-controller.ts  utils.ts
src/i18n/: index.ts
